apps/spinnaker/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spinnaker-api-tailscale
  finalizers:
    - tailscale.com/finalizer
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: spin-gate
      port:
        number: 8084
  tls:
    - hosts:
        - spinnaker-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spinnaker-tailscale
  finalizers:
    - tailscale.com/finalizer
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: spin-deck
      port:
        number: 9000
  tls:
    - hosts:
        - spinnaker
